lyricue3 (3.0.8.6-1) maverick; urgency=low

  * Force writing of config to db every startup (LP#636731)
  * Re-add lyricue_remote command

 -- Chris Debenham <chris@adebenham.com>  Wed, 15 Sep 2010 17:30:00 +1000

lyricue3 (3.0.8.5-1) maverick; urgency=low

  * Get lyricue_display to reload config when saving prefs in lyricue
  * Implement OSD functionality

 -- Chris Debenham <chris@adebenham.com>  Wed, 15 Sep 2010 17:30:00 +1000

lyricue3 (3.0.8.4-1) maverick; urgency=medium

  * Fix loading lyricue_display from apps menu
  * Save first config to database

 -- Chris Debenham <chris@adebenham.com>  Sun, 12 Sep 2010 17:31:00 +1000

lyricue3 (3.0.8.3-1) maverick; urgency=low

  * Change some install dependancies
  * Make interface work at 1024x600

 -- Chris Debenham <chris@adebenham.com>  Wed, 5 Sep 2010 17:31:00 +1000

lyricue3 (3.0.8.3-1) maverick; urgency=low

  * Fix status message to return proper screen size
  * Fix blank handling after preview

 -- Chris Debenham <chris@adebenham.com>  Wed, 5 Sep 2010 17:31:00 +1000

lyricue3 (3.0.8.2-1) maverick; urgency=low

  * Fix missing files

 -- Chris Debenham <chris@adebenham.com>  Tue, 5 Sep 2010 17:31:00 +1000

lyricue3 (3.0.8-1) maverick; urgency=low

  * Make presentation import retry if fails
  * Store presentation temp files in /var/tmp instead of /tmp
  * Packaging changes
  * Implement dbimage loading
  * Don't try to set the geometry if it is null
  * Make lyricue_display log to logfile/stderr

 -- Chris Debenham <chris@adebenham.com>  Tue, 5 Sep 2010 17:30:00 +1000

lyricue3 (3.0.7-1) maverick; urgency=low

  * Fixes for bible preview
  * Fix crash when blanking screen to database image
  * SEMI should be :

 -- Chris Debenham <chris@adebenham.com>  Sun, 5 Sep 2010 17:30:00 +1000

lyricue3 (3.0.6-1) maverick; urgency=low

  * More fixes to preview command
  * Change debug messages for verse adding
  * Use mipmaps for glyph caches

 -- Chris Debenham <chris@adebenham.com>  Fri, 3 Sep 2010 17:30:00 +1000
