@@ -2,6 +2,7 @@ lyricue3 (3.0.8.6-1) maverick; urgency=low
 
   * Force writing of config to db every startup (LP#636731)
   * Re-add lyricue_remote command
+  * Let lyricue_display use GeometryOverride if set
 
  -- Chris Debenham <chris@adebenham.com>  Wed, 15 Sep 2010 17:30:00 +1000
 
